Atualizando cadastro de pesca e criando tela de pesquisa.

--- a/src/main/webapp/resources/template/cabecalho.xhtml
+++ b/src/main/webapp/resources/template/cabecalho.xhtml
@@ -23,9 +23,9 @@
 		</p:submenu>
 
 		<p:submenu label="Pesca">
-			<p:menuitem value="Cadastrar" url="/pages/cadastroPesca.xhtml" />
+			<p:menuitem value="Cadastrar" url="/pages/cadastropesca.xhtml" />
 			<p:separator />
-			<!-- 					<p:menuitem value="Consultar" url="/pages/consultaLivro.jsf" /> -->
+			<p:menuitem value="Consultar" url="/pages/consultapesca.xhtml" />
 		</p:submenu>
 
 	</p:menubar>
