--- a/src/main/webapp/resources/template/template_principal.xhtml
+++ b/src/main/webapp/resources/template/template_principal.xhtml
@@ -11,7 +11,10 @@
 		<script type="text/javascript"
 			src="http://maps.google.com/maps/api/js?key=AIzaSyC3Rq87bCwK32kyfEEi_IDxF3HJeZlx50c" />
 			
+		<ui:insert name="head" />
+
 		<style>
+		
 * {
 	border-style: none;
 	font-weight: normal;
