--- a/src/main/webapp/resources/template/cabecalho.xhtml
+++ b/src/main/webapp/resources/template/cabecalho.xhtml
@@ -4,28 +4,34 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
-
-	<p:menubar>
-		<p:submenu label="Usuário">
-			<p:menuitem value="Cadastrar" url="/pages/cadastrousuario.xhtml" />
-			<p:separator />
-			<p:menuitem value="Consultar" url="/pages/consultausuario.xhtml" />
-		</p:submenu>
-		<p:submenu label="Peixe">
-			<p:menuitem value="Cadastrar" url="/pages/cadastropeixe.xhtml" />
-			<p:separator />
-			<p:menuitem value="Consultar" url="/pages/consultapeixe.xhtml" />
-		</p:submenu>
-		<p:submenu label="Ferramenta">
-			<p:menuitem value="Cadastrar" url="/pages/cadastroferramenta.xhtml" />
-			<p:separator />
-			<p:menuitem value="Consultar" url="/pages/consultaferramenta.xhtml" />
-		</p:submenu>
-		<p:submenu label="Pesca">
-			<p:menuitem value="Cadastrar" url="/pages/cadastropesca.xhtml" />
-			<p:separator />
-			<p:menuitem value="Consultar" url="/pages/consultapesca.xhtml" />
-		</p:submenu>
-
-	</p:menubar>
+	
+	<h:form>
+		<p:growl id="messageLogout" showDetail="true"></p:growl>
+		<p:menubar>
+			<p:submenu label="Usuário">
+				<p:menuitem value="Cadastrar" url="/pages/cadastrousuario.xhtml" />
+				<p:separator />
+				<p:menuitem value="Consultar" url="/pages/consultausuario.xhtml" />
+			</p:submenu>
+			<p:submenu label="Peixe">
+				<p:menuitem value="Cadastrar" url="/pages/cadastropeixe.xhtml" />
+				<p:separator />
+				<p:menuitem value="Consultar" url="/pages/consultapeixe.xhtml" />
+			</p:submenu>
+			<p:submenu label="Ferramenta">
+				<p:menuitem value="Cadastrar" url="/pages/cadastroferramenta.xhtml" />
+				<p:separator />
+				<p:menuitem value="Consultar" url="/pages/consultaferramenta.xhtml" />
+			</p:submenu>
+			<p:submenu label="Pesca">
+				<p:menuitem value="Cadastrar" url="/pages/cadastropesca.xhtml" />
+				<p:separator />
+				<p:menuitem value="Consultar" url="/pages/consultapesca.xhtml" />
+			</p:submenu>
+		
+				<f:facet name="options">
+		            <p:commandButton  value="Logout" action="#{loginMB.logout}" icon="ui-icon-extlink" update="messageLogout"/>
+		        </f:facet>
+		</p:menubar>
+	</h:form>
 </ui:composition>
