--- a/src/main/webapp/resources/template/template_principal.xhtml
+++ b/src/main/webapp/resources/template/template_principal.xhtml
@@ -20,7 +20,7 @@
 
 
 <!-- 		<h:outputStylesheet library="css" name="principal.css" /> -->
-<!-- 		<h:outputStylesheet library="css" name="default.css" /> -->
+		<h:outputStylesheet library="css" name="default.css" />
 
 	</h:head>
 	
