--- a/src/main/webapp/resources/template/template_principal.xhtml
+++ b/src/main/webapp/resources/template/template_principal.xhtml
@@ -19,8 +19,8 @@
 		</f:facet>
 
 
-<!-- 		<h:outputStylesheet library="css" name="principal.css" /> -->
 		<h:outputStylesheet library="css" name="default.css" />
+		<h:outputStylesheet library="css" name="login.css" />
 
 	</h:head>
 	
