--- a/src/main/webapp/resources/template/cabecalho.xhtml
+++ b/src/main/webapp/resources/template/cabecalho.xhtml
@@ -28,6 +28,8 @@
 				<p:separator />
 				<p:menuitem value="Consultar" url="/pages/consultapesca.xhtml" />
 			</p:submenu>
+			<p:menuitem label="Pesquisar" value="Pesquisar" url="/pages/map.xhtml" />
+		
 		
 				<f:facet name="options">
 					<p:splitButton value="#{sessionSecurity.userSession.nome}" rendered="#{sessionSecurity.userSession ne null}" icon="ui-icon-person" >
