--- a/src/main/webapp/resources/template/template_principal.xhtml
+++ b/src/main/webapp/resources/template/template_principal.xhtml
@@ -25,6 +25,10 @@
 	</h:head>
 	
 	<h:body>
+		<div id="logo" class="logo" align="left">
+			<h:graphicImage value="/resources/images/logoconspesca1.png" />
+		</div>
+	
 		<div>
 			<ui:insert name="cabecalho">
 				<ui:include src="/resources/template/cabecalho.xhtml" />
